Fixing garmnet time period gap

--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -119,7 +119,7 @@
 .garment-and-time {
     display: flex;
     width: 100%;
-    gap: 5vw;
+    gap: 3vw;
 }
 
 .dropdown-component {
